--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "nextjs",
   "functions": {
     "app/**/*.tsx": {
-      "runtime": "nodejs18.x"
+      "runtime": "vercel-php@0.6.0"
     }
   },
   "rewrites": [
